--- a/ProjectSourceCode/src/views/layouts/main.hbs
+++ b/ProjectSourceCode/src/views/layouts/main.hbs
@@ -1,7 +1,7 @@
 <!-- TODO: Add the head.hbs partial here -->
 {{>head}}
 <!-- TODO: Add the nav.hbs partial here -->
-{{!-- {{>nav}} --}}
+{{>nav}}
 {{{body}}}
 <!-- TODO: Add the footer.hbs partial here -->
 {{>footer}}
