Add openActionModal() to script.js and portfolio page

--- a/ProjectSourceCode/src/views/pages/portfolio.hbs
+++ b/ProjectSourceCode/src/views/pages/portfolio.hbs
@@ -24,8 +24,9 @@
 
 
         <!-- Button for 'Purchase Stock' modal -->
-        <button type="button" class="btn btn-secondary">+ Purchase Stock</button>
+        <button type="button" class="btn btn-secondary" onclick="openActionModal(-1)">+ Purchase Stock</button>
 
 
     </div>
 </body>
+{{>modal}}
