--- a/ProjectSourceCode/src/views/partials/modal.hbs
+++ b/ProjectSourceCode/src/views/partials/modal.hbs
@@ -1,22 +1,43 @@
 <!-- Modal elements -->
-    <div class="modal modal-lg" tabindex="-1" id="event-modal">
+    <div class="modal modal-lg" tabindex="-1" id="action-modal">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <h3 class="modal-title">New Event</h3>
-                    <button onclick="closeModal()" class="btn">
+                    <button onclick="closeActionModal()" class="btn">
                         X
                     </button>
                 </div>
                 <!-- Modal Form -->
                 <form>
                     <!-- Body -->
-                    <div class="modal-body"></div>
+                    <div class="modal-body">
+
+                        <!-- Asset Name -->
+                        <div class="mb-3">
+                            <label for="asset_name" class="form-label">Asset Name</label>
+                            <input type="text" class="form-control" id="stock_name">
+                        </div>
+
+                        <!-- Number of Shares -->
+                        <div class="mb-3">
+                            <label for="num_shares" class="form-label">Number of Shares</label>
+                            <input type="number" class="form-control" id="num_shares" required>
+                        </div>
+
+                        <!-- Value In US Dollars -->
+                        <div class="mb-3">
+                            <label for="value_in_usd" class="form-label">Value in USD</label>
+                            <p id="value_in_usd"></p>
+                        </div>
+
+
+                    </div>
 
                     <!-- Footer -->
                     <div class="modal-footer">
                         <!-- Close Btn -->
-                        <button onclick="closeModal()" class="btn btn-secondary">
+                        <button onclick="closeActionModal()" class="btn btn-secondary">
                             Close
                         </button>
                         <!-- Submit Btn -->
