--- a/ProjectSourceCode/src/views/pages/login.hbs
+++ b/ProjectSourceCode/src/views/pages/login.hbs
@@ -1,9 +1,11 @@
-<form action="/login" method="POST">
-    <h1>Login</h1>
-    <label for="username">Username:</label>
-    <input type="text" name="username" id = "username" /><br />
-    
-    <label for="username">Password:</label>
-    <input type="text" name="password" id = "password" /><br />
-    <button type="submit">Submit</button>
-</form>
+<div class="container mt-3">
+    <form class = "login-form" action="/login" method="POST">
+        <h1>Login</h1>
+        <label for="username">Username:</label>
+        <input type="text" name="username" id = "username" /><br />
+
+        <label for="username">Password:</label>
+        <input type="text" name="password" id = "password" /><br />
+        <button class="btn btn-secondary" type="submit">Submit</button>
+    </form>
+</div>
