--- a/ProjectSourceCode/src/views/pages/login.hbs
+++ b/ProjectSourceCode/src/views/pages/login.hbs
@@ -6,4 +6,6 @@
     <label for="username">Password:</label>
     <input type="text" name="password" id = "password" /><br />
     <button type="submit">Submit</button>
+    <br/>
+    <p>Haven't created an account yet? <a href="/register">Register here</a></p>
 </form>
