added message partial to register

--- a/ProjectSourceCode/src/views/pages/register.hbs
+++ b/ProjectSourceCode/src/views/pages/register.hbs
@@ -1,3 +1,4 @@
+{{>message}}
 <div class="container mt-3">
     <form class = "login-form" method="post" action="/register">
         <h1>Register</h1>
