--- a/ProjectSourceCode/src/views/pages/portfolio.hbs
+++ b/ProjectSourceCode/src/views/pages/portfolio.hbs
@@ -1,10 +1,9 @@
-
 <body onload="initializePortfolio()">
     <div class="container mt-3">
         <h1>Manage Portfolio</h1>
 
         <div class="container mt-2 bg-light rounded-lg p-5 my-3">
-            <label>Current Portofolio Value:</label>
+            <label>Current Portfolio Value:</label>
             <h2 id="portfolioCurrValue"></h2>
         </div>
 
@@ -12,20 +11,31 @@
             <thead>
                 <tr>
                 <th scope="col">#</th>
-                <th scope="col">Assett</th>
+                <th scope="col">Asset</th>
                 <th scope="col">Number of Shares</th>
                 <th scope="col">Value in US Dollars</th>
                 <th scope="col">Growth</th>
                 <th scope="col">Options</th>
                 </tr>
             </thead>
-            <tbody id="assetTableBody"></tbody>
+            <tbody id="assetTableBody">
+                {{#each userStocks}}
+                <tr>
+                    <th scope="row">{{@index}}</th>
+                    <td>{{name}}</td>
+                    <td>{{numShares}}</td>
+                    <td>${{valueInUSD}}</td>
+                    <td>-</td>
+                    <td>
+                        <button type="button" class="btn btn-secondary" onclick="openActionModal('{{id}}')">Manage</button>
+                    </td>
+                </tr>
+                {{/each}}
+            </tbody>
         </table>
-
 
         <!-- Button for 'Purchase Stock' modal -->
         <button type="button" class="btn btn-secondary" onclick="openActionModal(-1)">+ Purchase Stock</button>
-
 
     </div>
 </body>
