slight changes to login/register pages

--- a/ProjectSourceCode/src/views/pages/login.hbs
+++ b/ProjectSourceCode/src/views/pages/login.hbs
@@ -6,7 +6,11 @@
         <input type="text" name="username" id = "username" /><br />
 
         <label for="username">Password:</label>
-        <input type="text" name="password" id = "password" /><br />
+        <input type="password" name="password" id = "password" /><br />
         <button class="btn btn-secondary" type="submit">Submit</button>
     </form>
+    <p>
+        No account?
+        <a href="/register">Register</a>
+    </p>
 </div>
