Improved nav bar and page navigation. Made skeleton for group page.

--- a/ProjectSourceCode/src/views/pages/home.hbs
+++ b/ProjectSourceCode/src/views/pages/home.hbs
@@ -1,43 +1,1 @@
-<body>
-<div class="container mt-3">
-<h1>My Groups</h1>
-
-
-<div class="card bg-danger mb-3">
- <div class="card-header">
-   (group name)
- </div>
- <div class="card-body">
-   <h5 class="card-title">$(balance here)</h5>
-   <p class="card-text">Up/Down (amount)%</p>
-
-
-   <a href="#" class="btn btn-light">View</a>
- </div>
-
-
-</div>
-
-
-<div class="card bg-primary mb-3">
- <div class="card-header">
-   (group name)
- </div>
- <div class="card-body">
-   <h5 class="card-title">$(balance here)</h5>
-   <p class="card-text">Up/Down (amount)%</p>
-
-
-   <a href="#" class="btn btn-light">View</a>
- </div>
-
-
-</div>
-
-
-<button type="button" class="btn btn-dark">Add Group</button>
-
-
-
-
-</body>
+<h1>Home Page</h1>
