--- a/ProjectSourceCode/src/views/pages/login.hbs
+++ b/ProjectSourceCode/src/views/pages/login.hbs
@@ -1,16 +1,21 @@
 {{>message}}
 <div class="container mt-3">
-    <form class = "login-form" action="/login" method="POST">
-        <h1>Login</h1>
-        <label for="username">Username:</label>
-        <input type="text" name="username" id = "username" /><br />
-
-        <label for="username">Password:</label>
-        <input type="password" name="password" id = "password" /><br />
+    <h1>Login</h1>
+    <form class="login-form" action="/login" method="POST">
+        <div class="mb-1">
+            <label class="form-label" for="username">Username:</label>
+            <input class="form-control" type="text" name="username" id="username" /><br />
+        </div>
+        <div class="mb-1">
+            <label class="form-label" for="username">Password:</label>
+            <input class="form-control" type="password" name="password" id="password" /><br />
+        </div>
         <button class="btn btn-secondary" type="submit">Submit</button>
     </form>
-    <p>
-        No account?
-        <a href="/register">Register</a>
-    </p>
+    <div class="mt-3">
+        <h4>
+            No account?
+            <a href="/register">Register</a>
+        </h4>
+    </div>
 </div>
