--- a/ProjectSourceCode/src/views/pages/register.hbs
+++ b/ProjectSourceCode/src/views/pages/register.hbs
@@ -1,12 +1,15 @@
 {{>message}}
 <div class="container mt-3">
-    <form class = "login-form" method="post" action="/register">
-        <h1>Register</h1>
-        <label for="username">Username:</label>
-        <input type="text" name="username" id="username" /><br />
-
-        <label for="password">Password:</label>
-        <input type="password" name="password" id="password" /><br />
+    <h1>Register</h1>
+    <form class="login-form" method="post" action="/register">
+        <div class="mt-1">
+            <label class="form-label" for="username">Username:</label>
+            <input class="form-control" type="text" name="username" id="username" /><br />
+        </div>
+        <div class="mt-1">
+        <label class="form-label" for="password">Password:</label>
+        <input class="form-control" type="password" name="password" id="password" /><br />
+        </div>
         <button class="btn btn-secondary">Submit</button>
     </form>
 </div>
