Added draft for home page and name of website in nav bar.

--- a/ProjectSourceCode/src/views/pages/home.hbs
+++ b/ProjectSourceCode/src/views/pages/home.hbs
@@ -1,1 +1,14 @@
-<h1>Home Page</h1>
+<div class="container mt-3">
+
+<h2>MOCK STOCKS</h1>
+
+<h4>We’re inspiring a new generation of investors with a multiplayer fake stocks game for young adults.</h2>
+
+<h6>
+Our MockStocks application is a free stock game simulation designed to help young adults build an understanding of the stock market
+ and how to trade.
+Players can form groups with their friends and compete to see who has the best stock trading abilities.
+So, what are you waiting for? Register for an account and get started today!
+</h3>
+
+</div>
