--- a/ProjectSourceCode/src/views/partials/nav.hbs
+++ b/ProjectSourceCode/src/views/partials/nav.hbs
@@ -1,6 +1,6 @@
 <header>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light justify content center">
+    <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2 ">
       <a class="navbar-brand" href="/"></a>
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
@@ -23,7 +23,16 @@
         {{/if}}
       </ul>
     </div>
-    
+
+
+    <div class = "navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2 " align = "center">
+
+      <ul class="navbar-nav ml-auto" align="center">
+        <li class="nav-item" align="center">
+            <h3 align="center">MockStocks</h3>
+        </li>
+      </ul>
+    </div>
 
     <div class="navbar-collapse collapse order-3 dual-collapse2">
       <ul class="navbar-nav ml-auto">
