--- a/ProjectSourceCode/src/views/partials/nav.hbs
+++ b/ProjectSourceCode/src/views/partials/nav.hbs
@@ -1,5 +1,9 @@
+<style>
+.navbar-color:black
+</style>
+
 <header>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light justify content center">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2 ">
       <a class="navbar-brand" href="/"></a>
       <ul class="navbar-nav mr-auto">
@@ -27,9 +31,9 @@
 
     <div class = "navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2 " align = "center">
 
-      <ul class="navbar-nav ml-auto" align="center">
+      <ul class="navbar-nav ml-auto" style = "bs-navbar-color:black ; font-weight: bold ; font-size: x-large" align="center">
         <li class="nav-item" align="center">
-            <h3 align="center">MockStocks</h3>
+            <a style = "bs-navbar-color:black ; font-weight: bold ; font-size: 29px" align="center">MockStocks</a>
         </li>
       </ul>
     </div>
