--- a/ProjectSourceCode/src/views/pages/portfolio.hbs
+++ b/ProjectSourceCode/src/views/pages/portfolio.hbs
@@ -1,11 +1,20 @@
-<body onload="initializePortfolio({{userStocks}})">
+<body onload="initializeActionModal()">
     <div class="container mt-3">
         <h1>Manage Portfolio</h1>
 
         <div class="container mt-2 bg-light rounded-lg p-5 my-3">
-            <label>Current Portfolio Value:</label>
-            <h2 id="portfolioCurrValue">${{currPortfolioValue}}</h2>
+            <div class="row">
+                <div class="col">
+                    <label>Current Portfolio Value:</label>
+                    <h2 id="portfolioCurrValue">${{currPortfolioValue}}</h2>
+                </div>
+                <div class="col">
+                    <label>Available Liquidity:</label>
+                    <h2 id="currentLiquidity">${{currentLiquidity}}</h2>
+                </div>
+            </div>
         </div>
+
 
         <table class="table">
             <thead>
@@ -20,22 +29,31 @@
             </thead>
             <tbody id="assetTableBody">
                 {{#each userStocks}}
-                <tr>
+                <tr id="row-{{stock_id}}">
                     <th scope="row">{{@index}}</th>
-                    <td>{{stock_symbol}}</td>
+                    <td class="stock-symbol">{{stock_symbol}}</td>
                     <td>{{num_shares}}</td>
                     <td>${{current_value}}</td>
                     <td>-</td>
                     <td>
-                        <button type="button" class="btn btn-secondary" onclick="openActionModal('{{id}}')">Manage</button>
+                        <button type="button" class="btn btn-secondary" onclick="openActionModal(1,{{stock_id}})">Buy</button>
+                        <button type="button" class="btn btn-secondary" onclick="openActionModal(2,{{stock_id}})">Sell</button>
                     </td>
                 </tr>
                 {{/each}}
+                <tr class="table-light">
+                    <th>Total</th>
+                    <td></td>
+                    <td></td>
+                    <td>${{currPortfolioValue}}</td>
+                    <td></td>
+                    <td></td>
+                </tr>
             </tbody>
         </table>
 
         <!-- Button for 'Purchase Stock' modal -->
-        <button type="button" class="btn btn-secondary" onclick="openActionModal(-1)">+ Purchase Stock</button>
+        <button type="button" class="btn btn-secondary" onclick="openActionModal(3)">+ Purchase Stock</button>
 
     </div>
 </body>
