--- a/ProjectSourceCode/src/views/partials/modal.hbs
+++ b/ProjectSourceCode/src/views/partials/modal.hbs
@@ -1,101 +1,32 @@
 <!-- Modal elements -->
-    <div class="modal modal-lg" tabindex="-1" id="action-modal">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h3 class="modal-title">New Event</h3>
-                    <button onclick="closeActionModal()" class="btn">
-                        X
-                    </button>
-                </div>
-                <!-- Modal Form -->
-                
-                    <!-- Body -->
-                    <div class="modal-body">
-
-                        <!-- Value In US Dollars -->
-                        <div class="mb-3">
-                            <h4 id="asset_full_name"></h4>
-                            <h3 id="asset_market_value"></h3>
-                        </div>
-
-
-                        <div class="mb-3">
-                            <h5>Details</h5>
-                            <table class="table">
-                                <tbody>
-                                    <tr>
-                                        <td>Stock Code</td>
-                                        <td id="asset_name"></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Total Value</td>
-                                        <td id="value_in_usd"></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Shares Owned</td>
-                                        <td id="num_shares"></td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-
-                        <br class="my-4">
-
-
-                        <div id="actn-btn-container" class="d-flex">
-                            <button type="button" class="btn btn-success flex-grow-1 mx-1" id="buy-btn">Buy</button>
-                            <button type="button" class="btn btn-success flex-grow-1 mx-1" id="sell-btn">Sell</button>
-                        </div>
-
-
-                        <div class="mt-3 p-3 bg-light rounded ">
-
-                            <h4>Purchase Shares</h4>
-
-                            <hr/>
-
-                            <h6>Available Liquidity: $12,300.65</h6>
-
-                            <br/>
-
-                            <div class="w-100 d-flex flex-wrap">
-                                <div class="mb-3 flex-grow-1">
-                                    <h6>Value in USD:</h6>
-                                    <p>$20,000</p>
-                                </div>
-
-                                <div class="mb-3 flex-grow-1">
-                                    <h6>Remaining liquidity:</h6>
-                                    <p>$10,000</p>
-                                </div>
-
-                                <div class="mb-3 flex-grow-1">
-                                    <h6>Shares after transaction:</h6>
-                                    <p>4.5</p>
-                                </div>
-
-                            </div>
-
-                            <label>Amount: </label>
-                            <input type="number"/>
-
-                        </div>
-
-                    </div>
-
-                    <!-- Footer -->
-                    <div class="modal-footer">
-                        <!-- Close Btn -->
-                        <button onclick="closeActionModal()" class="btn btn-secondary">
-                            Close
-                        </button>
-                        <!-- Submit Btn -->
-                        <button id="submit_button" class="btn btn-primary" type="submit">
-                            Submit Changes
-                        </button>
-                    </div>
-            
+<div class="modal modal-lg" tabindex="-1" id="action-modal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 id="modal-title" class="modal-title">Action Modal</h3>
+                <button onclick="closeActionModal()" class="btn">
+                    X
+                </button>
+            </div>
+            <!-- Additional Information -->
+            <div class="additional-info-container bg-light p-2" id="additional-info">
+                <!-- This div will be dynamically populated based on the action type -->
+            </div>
+            <!-- Form -->
+            <form class="container p-3" id="action-form" method="post">
+                <!-- This form will be dynamically populated based on the action type -->
+            </form>
+            <!-- Footer -->
+            <div class="modal-footer">
+                <!-- Close Btn -->
+                <button onclick="closeActionModal()" class="btn btn-secondary">
+                    Close
+                </button>
+                <!-- Submit Btn -->
+                <button id="submit_button" class="btn btn-primary" type="submit">
+                    Submit
+                </button>
             </div>
         </div>
     </div>
+</div>
