--- a/ProjectSourceCode/src/views/pages/portfolio.hbs
+++ b/ProjectSourceCode/src/views/pages/portfolio.hbs
@@ -53,7 +53,7 @@
         </table>
 
         <!-- Button for 'Purchase Stock' modal -->
-        <button type="button" class="btn btn-secondary" onclick="openActionModal(3)">+ Purchase Stock</button>
+        <button type="button" class="btn btn-secondary" onclick="openActionModal(3)">+ Purchase New Stock</button>
 
     </div>
 </body>
