--- a/ProjectSourceCode/src/views/pages/groups.hbs
+++ b/ProjectSourceCode/src/views/pages/groups.hbs
@@ -3,7 +3,7 @@
 <h1>My Groups</h1>
 
 
-<div class="card bg-danger mb-3">
+<div class="card mb-3" style="background-color: #F18AED !important;">
  <div class="card-header">
    (group name)
  </div>
@@ -34,11 +34,11 @@
  </div>
  -->
 
+<button type="button" class="btn btn-primary rounded-pill">+ Add Group</button>
 
 </div>
 
 
-<button type="button" class="btn btn-dark">Add Group</button>
 
 
 
