rename add group to create group, added group code parameter to group

--- a/ProjectSourceCode/src/views/pages/groups.hbs
+++ b/ProjectSourceCode/src/views/pages/groups.hbs
@@ -34,7 +34,9 @@
  </div>
  -->
 
-<button type="button" class="btn btn-primary rounded-pill">+ Add Group</button>
+<button type="button" class="btn btn-primary rounded-pill">+ Create Group</button>
+
+<button type="button" class="btn btn-primary rounded-pill">+ Join Group</button>
 
 </div>
 
