Made it so that user can create a group which is added to the database

--- a/ProjectSourceCode/src/views/pages/groups.hbs
+++ b/ProjectSourceCode/src/views/pages/groups.hbs
@@ -16,33 +16,23 @@
    <a href="/portfolio?portfolioId=1" class="btn btn-light">View Portfolio</a>
  </div>
 
-
 </div>
 
-<!--
-<div class="card bg-primary mb-3">
- <div class="card-header">
-   (group name)
- </div>
- <div class="card-body">
-   <h5 class="card-title">$(balance here)</h5>
-   <p class="card-text">Up/Down (amount)%</p>
+<div>
+<a href="/create_group" type="button" class="btn btn-primary rounded-pill">+ Create Group</a>
+</div>
 
+<div>
+    <p></p>
+</div>
 
-   <a href="#" class="btn btn-light">View</a>
-   <a href="#" class="btn btn-light">View</a>
- </div>
- -->
-
-<button type="button" class="btn btn-primary rounded-pill">+ Create Group</button>
-
+<div>
 <button type="button" class="btn btn-primary rounded-pill">+ Join Group</button>
-
 </div>
-
-
 
 
 
 
 </body>
+
+
