added carousel to home page

--- a/ProjectSourceCode/src/resources/css/style.css
+++ b/ProjectSourceCode/src/resources/css/style.css
@@ -13,6 +13,17 @@
 div.carousel-item{
     height: 800px;
 }
+.card-body{
+    padding: 30px;
+    text-align: center;
+    
+}
+
+
+
+div.carousel-item{
+    height: 800px;
+}
 
 div.carousel-item > div.container-xl{
     background-size: cover;
