added carousel to home page

--- a/ProjectSourceCode/src/views/pages/home.hbs
+++ b/ProjectSourceCode/src/views/pages/home.hbs
@@ -1,14 +1,73 @@
 <div class="container mt-3">
 
-<h2>MOCK STOCKS</h1>
+    <h1>MOCK STOCKS</h1>
 
-<h4>We’re inspiring a new generation of investors with a multiplayer fake stocks game for young adults.</h2>
+    <h4>We’re inspiring a new generation of investors with a multiplayer fake stocks game for young adults.</h4>
 
-<h6>
-Our MockStocks application is a free stock game simulation designed to help young adults build an understanding of the stock market
- and how to trade.
-Players can form groups with their friends and compete to see who has the best stock trading abilities.
-So, what are you waiting for? Register for an account and get started today!
-</h3>
+</div>
+<hr>
 
+<div id="about-cont" class="container-xxl">
+    <div id="info" class="carousel carousel-dark slide">
+        <div class="carousel-indicators" id="carousel-bottom-indicators">
+            <button type="button" data-bs-target="#info" data-bs-slide-to="0" class="active" aria-current="true"
+                aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#info" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#info" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+            <div id="carousel-item-1" class="carousel-item active">
+                <div id="project-1" class="container-xl" style="background-image: url(../resources/img/stonks.jpg);">
+                    <div class="card slide-card text-bg-light">
+                        <div class="card-body">
+                            <h3 class="card-title slide-title"> About This Website:</h3>
+                            <p class="card-text slide-text">Our MockStocks application is a free stock game simulation
+                                designed to help young adults build an understanding of the stock market
+                                and how to trade.
+                                Players can form groups with their friends and compete to see who has the best stock
+                                trading abilities.
+                                So, what are you waiting for? Register for an account and get started today!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="carousel-item-2" class="carousel-item">
+                <div id="project-2" class="container-xl"
+                    style="background-image: url(../resources/img/stock_graph.jpg);">
+                    <div class="card slide-card text-bg-light">
+                        <div class="card-body">
+                            <h3 class="card-title slide-title"> Buying and Selling:</h3>
+                            <p class="card-text slide-text"> Our Website will provide you with the latest stock data and
+                                trends and let you buy and sell shares for almost any American stock that is available.
+                                Our envirionment uses fictional currency, so you don't need to worry about losing any
+                                money and can learn investing skills in a safe environment.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="carousel-item-3" class="carousel-item">
+                <div id="project-3" class="container-xl" style="background-image: url(../resources/img/image6.jpg);">
+                    <div class="card slide-card text-bg-light">
+                        <div class="card-body">
+                            <h3 class="card-title slide-title">Join a Group:</h3>
+                            <p class="card-text slide-text"> You and your friends can create a group together to start a
+                                stock competition! Each member will be given an inital amount of money and all users in
+                                the group can compare what investments were made and how they payed off on a leaderboard.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <a class="carousel-control-prev" role="button" data-bs-target="#info" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </a>
+        <a class="carousel-control-next" role="button" data-bs-target="#info" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </a>
+    </div>
 </div>
