--- a/ProjectSourceCode/src/resources/css/style.css
+++ b/ProjectSourceCode/src/resources/css/style.css
@@ -1,3 +1,32 @@
 .form-control{
     width: 300px;
 }
+
+.card-body{
+    padding: 30px;
+    text-align: center;
+    
+}
+
+
+
+div.carousel-item{
+    height: 800px;
+}
+
+div.carousel-item > div.container-xl{
+    background-size: cover;
+    height: 800px;
+    margin: 3;
+    display: flex;
+    align-items: end;
+    justify-content: center;
+}
+
+div.container-xl > div.card{
+    opacity: 0.75;
+    margin-bottom: 10px;
+}
+
+
+
