added photo to group slide

--- a/ProjectSourceCode/src/views/pages/home.hbs
+++ b/ProjectSourceCode/src/views/pages/home.hbs
@@ -48,7 +48,7 @@
                 </div>
             </div>
             <div id="carousel-item-3" class="carousel-item">
-                <div id="project-3" class="container-xl" style="background-image: url(../resources/img/image6.jpg);">
+                <div id="project-3" class="container-xl" style="background-image: url(../resources/img/group.jpg);">
                     <div class="card slide-card text-bg-light">
                         <div class="card-body">
                             <h3 class="card-title slide-title">Join a Group:</h3>
