--- a/ProjectSourceCode/src/views/pages/group.hbs
+++ b/ProjectSourceCode/src/views/pages/group.hbs
@@ -1,2 +1,7 @@
 <h1>My Group Dashboard</h1>
-<h3>Group ID : {{groupId}}</h3>
+<h3>Group ID : {{groupData.group_id}}</h3>
+<h3>Group ID : {{groupData.group_name}}</h3>
+<h3>Group ID : {{groupData.admin_user}}</h3>
+<h3>Group ID : {{groupData.starting_liquidity}}</h3>
+<h3>Group ID : {{groupData.icon_num}}</h3>
+<h3>Group ID : {{groupData.group_code}}</h3>
