fixed db/unit test

--- a/ProjectSourceCode/src/views/pages/home.hbs
+++ b/ProjectSourceCode/src/views/pages/home.hbs
@@ -17,7 +17,7 @@
         </div>
         <div class="carousel-inner">
             <div id="carousel-item-1" class="carousel-item active">
-                <div id="project-1" class="container-xl" style="background-image: url(../resources/img/stonks.jpg);">
+                <div id="info-1" class="container-xl" style="background-image: url(../resources/img/stonks.jpg);">
                     <div class="card slide-card text-bg-light">
                         <div class="card-body">
                             <h3 class="card-title slide-title"> About This Website:</h3>
@@ -33,7 +33,7 @@
                 </div>
             </div>
             <div id="carousel-item-2" class="carousel-item">
-                <div id="project-2" class="container-xl"
+                <div id="info-2" class="container-xl"
                     style="background-image: url(../resources/img/stock_graph.jpg);">
                     <div class="card slide-card text-bg-light">
                         <div class="card-body">
@@ -48,12 +48,8 @@
                 </div>
             </div>
             <div id="carousel-item-3" class="carousel-item">
-<<<<<<< HEAD
-                <div id="project-3" class="container-xl" style="background-image: url(../resources/img/group.jpg);">
-=======
-                <div id="project-3" class="container-xl" style="background-image: url(../resources/img/image6.jpg);">
->>>>>>> 4ccd7da (added carousel to home page)
-                    <div class="card slide-card text-bg-light">
+                <div id="info-3" class="container-xl" style="background-image: url(../resources/img/group.jpg);">
+                    <div class="card slide-card text-bg-light" style="margin-bottom: 20px !important;">
                         <div class="card-body">
                             <h3 class="card-title slide-title">Join a Group:</h3>
                             <p class="card-text slide-text"> You and your friends can create a group together to start a
