--- a/ProjectSourceCode/src/views/pages/group.hbs
+++ b/ProjectSourceCode/src/views/pages/group.hbs
@@ -7,6 +7,7 @@
         </div>
         <div class="col">
           <h1 class="mb-0">{{groupData.group_name}}</h1>
+          <h6 class="mt-2">Starting Liquidity : ${{groupData.starting_liquidity}}</h6>
         </div>
         <div class="col-auto">
           {{#if isAdmin}}
@@ -15,6 +16,7 @@
         </div>
       </div>
     </div>
+
 
     <div class="card mb-3" style="background-color: #f8f9fa !important;">
       <div class="d-flex align-items-center p-3">
