Improved ui for group and group pages.

--- a/ProjectSourceCode/src/views/pages/groups.hbs
+++ b/ProjectSourceCode/src/views/pages/groups.hbs
@@ -11,10 +11,11 @@
       <div class="card-body">
         <h5 class="card-title">Starting Liquidity: ${{starting_liquidity}}</h5>
 
+        <p></p>
         <!-- Wrap the buttons in a container -->
-        <div class="btn-group d-flex" style="width: 100%;">
-          <a class="btn btn-light flex-fill" style="background-color: #{{backgroundColor}};" href="/group?groupId={{group_id}}" >View Group</a>
-          <a class="btn btn-light flex-fill" style="background-color: #{{backgroundColor}};" href="/portfolio?portfolioId={{portfolio_id}}" >View Portfolio</a>
+        <div class="" style="width: 100%;">
+          <a class="btn btn-light" style="" href="/group?groupId={{group_id}}" >View Group</a>
+          <a class="btn btn-light" style="" href="/portfolio?portfolioId={{portfolio_id}}" >View Portfolio</a>
         </div>
       </div>
     </div>
