--- a/ProjectSourceCode/src/resources/css/style.css
+++ b/ProjectSourceCode/src/resources/css/style.css
@@ -39,3 +39,8 @@ div.container-xl > div.card{
     border: 4px solid #7ACBDD; 
     border-radius: 10px; 
 }
+
+based:hover {
+    background-color: #008CBA; /* change to your desired color */
+    color: white; /* change to your desired color */
+}
