--- a/ProjectSourceCode/src/views/pages/group.hbs
+++ b/ProjectSourceCode/src/views/pages/group.hbs
@@ -18,23 +18,31 @@
     </div>
 
 
-    <div class="card mb-3" style="background-color: #f8f9fa !important;">
-      <div class="d-flex align-items-center p-3">
-        <div class="d-flex align-items-center justify-content-center rounded-circle text-white p-2" style="width: 75px; height: 75px; background-color: #7ACBDD !important;">
-          <h3 class="m-0">#{{userPortfolio.rank}}</h3> <!-- Assuming this is the current user's portfolio -->
+    <div class="card mb-3" style="background-color: #ef6d92 !important;">
+      <div class="card-header d-flex align-items-center">
+        <div class="rounded-circle bg-white d-flex justify-content-center align-items-center p-2 me-3" style="width: 50px; height: 50px;">
+          <h4 class="m-0">#{{userPortfolio.rank}}</h4>
         </div>
-        <h2 class="p-3 m-0">My Portfolio</h2>
+        <h3 class="m-2">My Portfolio</h3>
       </div>
-      <h4 class="p-3">Current Value: ${{userPortfolio.portfolioValue}}</h4>
-      <h4 class="p-3">
-        Top Performing Stock: 
-        {{#if userPortfolio.topStock}}
-          {{userPortfolio.topStock}}
-        {{else}}
-          N/A
-        {{/if}}
-      </h4>
-      <a href="/portfolio?portfolioId={{userPortfolio.portfolio_id}}" class="btn btn-light">Manage Portfolio</a>
+
+      <div class="card-body text-left">
+        <h5 class="d-flex align-items-center justify-content-center  m-2 mb-3">Current Value: ${{userPortfolio.portfolioValue}}</h4>
+        <h6 class="d-flex align-items-center justify-content-center  m-2">
+          Top Stock: 
+          {{#if userPortfolio.topStock}}
+            {{userPortfolio.topStock}}
+          {{else}}
+            N/A
+          {{/if}}
+        </h4>
+      </div>
+
+      <div class="d-flex align-items-center justify-content-center " style="width: 100%;">
+        <a  style="" href="/portfolio?portfolioId={{userPortfolio.portfolio_id}}" class="btn btn-light">Manage Portfolio</a>
+      </div>
+
+      <p></p>
 
     </div>
 
@@ -52,8 +60,8 @@
               <h3 class="m-2">User : {{user_id}}</h3>
             </div>
             <div class="card-body text-left">
-              <h5 class="m-2 mb-3">Portfolio Value: ${{portfolioValue}}</h5>
-              <p class="m-2">Top Stock: {{#if topStock}}{{topStock}}{{else}}N/A{{/if}}</p>
+              <h5 class="m-2 mb-3">Current Value: ${{portfolioValue}}</h5>
+              <h6 class="m-2">Top Stock: {{#if topStock}}{{topStock}}{{else}}N/A{{/if}}</p>
             </div>
           </div>
         {{/each}}
