--- a/ProjectSourceCode/src/views/pages/edit_group.hbs
+++ b/ProjectSourceCode/src/views/pages/edit_group.hbs
@@ -25,7 +25,7 @@
         <!-- Hidden input field for icon_num -->
         <input type="hidden" id="icon_num" name="icon_num" value="">
         <div class="my-3"></div>
-        <button class="btn btn-secondary" type="submit">Submit</button>
+        <button class="btn btn-primary rounded-pill" type="submit">Submit</button>
         <br/>
     </form>
 </div>
