Edit and delete group

--- a/ProjectSourceCode/src/views/pages/group.hbs
+++ b/ProjectSourceCode/src/views/pages/group.hbs
@@ -11,7 +11,7 @@
         </div>
         <div class="col-auto">
           {{#if isAdmin}}
-            <a href="/edit_group"><img width="40" src="/images/gear.svg" alt="Settings"></a>
+            <a href="/edit_group?groupId={{groupData.group_id}}"><img width="40" src="/images/gear.svg" alt="Settings"></a>
           {{/if}}
         </div>
       </div>
