Got rid of unnecessary notification.

--- a/ProjectSourceCode/src/views/pages/edit_group.hbs
+++ b/ProjectSourceCode/src/views/pages/edit_group.hbs
@@ -61,7 +61,7 @@
                     });
                     const data = await response.json();
                     if (response.ok) {
-                        alert(data.message);
+                        //alert(data.message);
                         // Redirect to /groups upon successful deletion
                         window.location.href = '/groups';
                     } else {
